fix [is_time_unit_minute], wrap recipe select with border

--- a/css/App.css
+++ b/css/App.css
@@ -13,6 +13,10 @@
     color: white !important;
 }
 
+.border-recipe-item {
+    border: 1px dashed #484 !important;
+}
+
 .bg-unselected {
     background-color: #AAA !important;
     color: white !important;
